3.1.0 file, using the last 8.8 version